Updated the XHdcp1x_TxReset() to clear the Authentication Request flag.
Updated XHdcp1x_PortHdmiRxDisable function to clear KSV_FIFO.

sysmonpsu_v2_5:
Fixed Cppcheck warnings
Modified code for MISRA-C:2012 Compliance.

sysmon_v7_5:
Added Example for Vaux external channels

axidma_v9_8:
Fix cppcheck, gcc and doxygen warnings.

can_v3_3:
Fix cppcheck and GCC warnings.

canfd_v1_3:
Fix cppcheck, gcc and doxygen warnings.
Changed the Canfd ID with 11 bit value.
Fixed Selftest Hang issue (CR#1009802)

canfd_v1_3:
Fix cppcheck, gcc and doxygen warnings.
Changed the Canfd ID with 11 bit value.

canfd_v2_0:
Added support for canfd 2.0 spec regarding PL
SoftIP.

emacps_v3_8:
Fix cppcheck, GCC and doxygen warnings.
Remove duplicate code in xemacps_bd.h
Fixed PTP interrupt masks and cleaned up comments.
Fix warning in example for redefinition of interrupt number.

gpiops_v3_4:
Resolved cppcheck warnings.(CR#1006331)
Resolved MISRA-C mandatory violations.(CR#1007751)

sdps_v3_6
Fixed Cppcheck, Doxygen and gcc warnings (CR#1006375)
Add initializer macro for HasEMIO
Add support for using 64Bit DMA in 32Bit Processor
Add cache invalidation call before returning from ReadPolled API
Resolve compilation warnings for ARMCC toolchain
Change Expected Response for CMD3 to R1 for MMC

xilffs_v4_0:
Upgraded the FatFS version to 0.13b
Fix Cppcheck and Doxygen warnings
Modify sector buffer alignment to that of cache line supported
SD Example - Change file size to 8MB from 8KB for ZynqMP platform
Modify tcl file to create FILE_SYSTEM_INTERFACE_SD in xparameters.h only once
if there are multiple instances of SD
Add Word Access support in latest FatFS source
Update the bug fixes on 0.13b FatFS

clockps_v1_0:
First release of clocksPS drivers.
Fix Doxygen and coverity reported issues.

lwip202_v1_2:
Add mcdma support and handle IEEE_1588 for AXI Phy in ethernet header.
Add AXI 2.5G Ethernet support.