@@ -32,7 +32,7 @@ BEGIN driver nandpsu
   OPTION supported_peripherals = (psu_nand);
   OPTION driver_state = ACTIVE;
   OPTION copyfiles = all;
-  OPTION VERSION = 1.4;
+  OPTION VERSION = 1.5;
   OPTION NAME = nandpsu;
 
 END driver
