@@ -109,6 +109,7 @@ Added Example for Vaux external channels
 
 axidma_v9_8:
 Fix cppcheck, gcc and doxygen warnings.
+Added 64 bit DMA addresses support for Microblaze-X
 
 can_v3_3:
 Fix cppcheck and GCC warnings.
@@ -131,6 +132,7 @@ Fix cppcheck, GCC and doxygen warnings.
 Remove duplicate code in xemacps_bd.h
 Fixed PTP interrupt masks and cleaned up comments.
 Fix warning in example for redefinition of interrupt number.
+Added 64 bit DMA addresses support for Microblaze-X
 
 gpiops_v3_4:
 Resolved cppcheck warnings.(CR#1006331)
@@ -143,6 +145,7 @@ Add support for using 64Bit DMA in 32Bit Processor
 Add cache invalidation call before returning from ReadPolled API
 Resolve compilation warnings for ARMCC toolchain
 Change Expected Response for CMD3 to R1 for MMC
+Added 64 bit DMA addresses support for Microblaze-X
 
 xilffs_v4_0:
 Upgraded the FatFS version to 0.13b
@@ -180,6 +183,10 @@ Remove unused define for buffer length mask(XMCDMA_BD_LEN_MASK).
 Fix typos and rephrase comment description.
 Read buffer length register width from IP config.
 In driver tcl update get_cells API to support hierarchical designs.
+Added 64 bit DMA addresses support for Microblaze-X
+
+nandpsu_v1_5:
+Added 64 bit DMA addresses support for Microblaze-X
 
 cpu_v2_8:
 Added Os and LTO settings in extra compiler flags for PMU BSP
@@ -213,6 +220,7 @@ Setup64BRxDma() should be called if the RxAddress is greater than 32 bit address
 Added support for low density ISSI flash parts
 Fixed the code in XQspiPsu_GenFifoEntryData() for data transfer length up to 255 for reducing the extra loop.
 Fixed compilation warnings.
+Added 64 bit DMA addresses support for Microblaze-X.
 
 rfdc_v5_0:
 Update DAC min sampling rate to 500MHz and also update VCO Range, PLL_DIVIDER and PLL_FPDIV ranges.
